# Package-Manager

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  package_manager_docs.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Schema/: README.md  archive-package-manifest.schema.json  common-definitions.schema.json  graph-export-json.schema.json  install-plan.schema.json  installed-records.schema.json  lockfile.schema.json  project-manifest.schema.json  registry-index.schema.json
benchmarks/: bench_resolver.py
docs/adr/: 0001-core-decisions.md  0001-deterministic-backtracking-resolver.md  0002-local-registry-and-inert-archives.md  0003-lockfile-install-verify-store-model.md  0004-single-user-no-locks.md  README.md
examples/: build_archives.py
src/pypm_lab/: __init__.py  __main__.py  cli.py  conflicts.py  constraints.py  errors.py  fsio.py  graph.py  installer.py  integrity.py  jsonio.py  lockfile.py  manifest.py  models.py  outdated.py  publish.py  registry.py  registry_validation.py  requirements.py  resolver.py  store.py  tar_safe.py  verify.py  versions.py
tests/: conftest.py  test_cli.py  test_graph_lockfile.py  test_install_round2.py  test_module_cli.py  test_module_constraints.py  test_module_final_coverage.py  test_module_graph.py  test_module_installer_rollback.py  test_module_installer_verify.py  test_module_jsonio_models.py  test_module_lockfile.py  test_module_manifest_store.py  test_module_registry_validation.py  test_module_resolver_misc.py  test_project_metadata.py  test_properties.py  test_registry_install_verify.py  test_registry_validation.py  test_resolver.py  test_robustness.py  test_round3.py  test_versions_requirements.py  test_workflow.py
