[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pypm-lab"
version = "0.1.0"
description = "Educational local package manager with deterministic dependency resolution."
readme = "README.md"
requires-python = ">=3.11.4"
license = { file = "LICENSE" }
authors = [{ name = "Princeton Afeez" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.8"]

[project.scripts]
pypm = "pypm_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["pypm_lab"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
