[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pypm-lab"
version = "0.1.0"
description = "Educational local package manager with deterministic dependency resolution."
readme = "README.md"
requires-python = ">=3.11.4"
license = { file = "LICENSE" }
authors = [{ name = "Princeton Afeez" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "hypothesis>=6,<7",
  "mypy>=1.8,<2",
  "ruff>=0.5,<1",
]

[project.urls]
Changelog = "CHANGELOG.md"
Repository = "https://github.com/example/pypm-lab"

[project.scripts]
pypm = "pypm_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "ignore:The configuration option \"asyncio_default_fixture_loop_scope\" is unset:pytest.PytestDeprecationWarning",
]

[tool.coverage.run]
branch = false
source = ["pypm_lab"]
omit = [
  "*/tests/*",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_empty = true
precision = 1
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["pypm_lab"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
